# Buckley-Leverett

./: .gitignore  ReadMe.md  gui.py  requirements.txt
BL_cpp/: .gitignore  CMakeLists.txt  ReadMe.md  dynamic.cpp  main.cpp  plot_sw.py  reverse_final.cpp  reverse_final_algo.cpp
BL_cpp/ofp/: comparison.py  ofp1  ofp_10  ofp_new  ofp_with_noise  plot_ofp copy 2.py  plot_ofp.py  plot_sw_with_noise.py
BL_cpp/results/: plot_std.py  plotter.py  res_15-03-2023_18-54-14  res_16-03-2023_20-26-08
BL_cpp/reverse_problem/: add_noise.cpp  reverse_dinamic.cpp  reverse_solver.cpp  reverse_solver_noise  reverse_solver_noise.cpp
BL_cpp/source/: BLproblem.cpp  BLproblem.h  params.h  visualize.py
BL_cpp/test_folder/: test
My BL/: buckley_solver.py
output_examples/: res
